--- a/part1_basic/Basic/basic.ipynb
+++ b/part1_basic/Basic/basic.ipynb
@@ -163,10 +163,18 @@
     "\\end{equation}\n",
     "Then,\n",
     "\\begin{equation}\n",
-    "\\frac{\\partial y}{\\partial w_1} = \\frac{\\partial y}{\\partial t} \\times \\frac{\\partial t}{\\partial w_1} = \\sigma'(t) \\times x_1;\\\\\n",
-    "\\frac{\\partial y}{\\partial w_2} = \\frac{\\partial y}{\\partial t} \\times \\frac{\\partial t}{\\partial w_2} = \\sigma'(t) \\times x_2;\\\\\n",
-    "\\frac{\\partial y}{\\partial b} = \\frac{\\partial y}{\\partial t} \\times \\frac{\\partial t}{\\partial b} = \\sigma'(t);\\\\\n",
-    "\\frac{\\partial y}{\\partial x_1} = \\frac{\\partial y}{\\partial t} \\times \\frac{\\partial t}{\\partial x_1} = \\sigma'(t) \\times w_1;\\\\\n",
+    "\\frac{\\partial y}{\\partial w_1} = \\frac{\\partial y}{\\partial t} \\times \\frac{\\partial t}{\\partial w_1} = \\sigma'(t) \\times x_1;\n",
+    "\\end{equation}\n",
+    "\\begin{equation}\n",
+    "\\frac{\\partial y}{\\partial w_2} = \\frac{\\partial y}{\\partial t} \\times \\frac{\\partial t}{\\partial w_2} = \\sigma'(t) \\times x_2;\n",
+    "\\end{equation}\n",
+    "\\begin{equation}\n",
+    "\\frac{\\partial y}{\\partial b} = \\frac{\\partial y}{\\partial t} \\times \\frac{\\partial t}{\\partial b} = \\sigma'(t);\n",
+    "\\end{equation}\n",
+    "\\begin{equation}\n",
+    "\\frac{\\partial y}{\\partial x_1} = \\frac{\\partial y}{\\partial t} \\times \\frac{\\partial t}{\\partial x_1} = \\sigma'(t) \\times w_1;\n",
+    "\\end{equation}\n",
+    "\\begin{equation}\n",
     "\\frac{\\partial y}{\\partial x_2} = \\frac{\\partial y}{\\partial t} \\times \\frac{\\partial t}{\\partial x_2} = \\sigma'(t) \\times w_2.\n",
     "\\end{equation}\n"
    ]
