--- a/part1_basic/Basic/basic.ipynb
+++ b/part1_basic/Basic/basic.ipynb
@@ -326,11 +326,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Build mse loss\n",
-    "mean squared error (mse) loss:\n",
-    "\\begin{equation}\n",
-    "L_{mse} = \\frac{1}{N} \\sum_{i=1}^{N} (label - pred)^2\n",
-    "\\end{equation}"
+    "## Build mean squared error (mse) loss"
    ]
   },
   {
