--- a/part1_basic/Basic/basic.ipynb
+++ b/part1_basic/Basic/basic.ipynb
@@ -12,9 +12,7 @@
     "3. We build a simple neural network with backward.\n",
     "4. We train & evaluate the simple neural network.\n",
     "\n",
-    "All operations are run on the CPU.\n",
-    "\n",
-    "Reference: https://victorzhou.com/blog/intro-to-neural-networks/"
+    "All operations are run on the CPU."
    ]
   },
   {
